# uget-integrator

./: .gitignore  CMakeLists.txt  README  README.md  changelog
chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
conf/: com.javahelps.ugetchromewrapper.json  com.javahelps.ugetfirefoxwrapper.json  com.ugetdm.chrome.json  com.ugetdm.firefox.json
config/category/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json
debian/: changelog  control  copyright  install
extension/: background.js  content.js  extract.js  manifest.json  popup.css  popup.html  popup.js
install/linux/: .gitignore  install_uget_integrator.sh  uget-integrator.spec  uninstall_uget_integrator.sh
install/windows/: add_config.bat  config.bat  remove_config.bat  uget-integrator.bat  uget-integrator.nsi
uget-chrome-wrapper/conf/: com.javahelps.ugetchromewrapper.json  com.javahelps.ugetfirefoxwrapper.json  uget-firefox-wrapper.json
uget-chrome-wrapper/debian/: changelog  control  copyright  install
uget-chrome-wrapper/manpages/: uget-chrome-wrapper.1
uget-chrome-wrapper/windows/: uget-chrome-wrapper.bat
windows/: uget-integrator.bat
